--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy==1.24.3
 scipy==1.10.1
 PyYAML==6.0.1
 
-git+https://github.com/espnet/espnet@202402#egg=espnet
+git+https://github.com/espnet/espnet@v.202503#egg=espnet
 
 soundfile==0.12.1
 requests==2.31.0
