--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,22 @@
-flask==2.0.1
-torch==2.0.0
-torchaudio==2.0.1
+setuptools>=65.5.1
+wheel>=0.40.0
 numpy==1.23.5
 scipy==1.10.1
 PyYAML==6.0.1
-
-git+https://github.com/espnet/espnet@v.202503#egg=espnet
-
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.0+cpu
+torchaudio==2.0.1+cpu
+flask==2.0.1
+werkzeug==2.0.3
 soundfile==0.12.1
 requests==2.31.0
 matplotlib==3.7.1
 pandas==2.0.3
 indic-num2words==1.3.1
-
 nltk==3.8.1
 indic-unified-parser==1.0.6
 gunicorn==21.2.0
-# Additional dependencies
-setuptools>=65.5.1
-wheel>=0.40.0 
+espnet==202503
 
-werkzeug==2.0.3
+git+https://github.com/espnet/espnet@v.202503#egg=espnet
 
