--- a/render.yaml
+++ b/render.yaml
@@ -2,38 +2,21 @@ services:
   - type: web
     name: lavanya-tts
     env: python
-    buildCommand: |
-      # Install system dependencies
-      apt-get update
-      apt-get install -y libsndfile1 libportaudio2 ffmpeg
-      # Upgrade pip and install build tools
-      pip install --upgrade pip setuptools wheel
-      # Install Python dependencies
-      pip install -r requirements.txt
-      # Download NLTK data
-      python -c "import nltk; nltk.download('punkt')"
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --timeout 300
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
       - key: PYTHONUNBUFFERED
         value: "1"
-      - key: MAX_CONTENT_LENGTH
-        value: "16777216"
       - key: FLASK_ENV
         value: production
       - key: WORKERS
         value: "1"
       - key: TIMEOUT
         value: "300"
-      - key: SAMPLING_RATE
-        value: "22050"
-      - key: MAX_WAV_VALUE
-        value: "32768.0"
       - key: PYTHONPATH
         value: /opt/render/project/src:/opt/render/project/src/Fastspeech2_HS
-      - key: PATH
-        value: /opt/render/project/src/.local/bin:${PATH}
     disk:
       name: audio
       mountPath: /opt/render/project/src/static/audio
