--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: |
       python -m pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --timeout 300
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 8 --timeout 600 --keep-alive 120 --max-requests 5 --max-requests-jitter 2
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
@@ -16,9 +16,13 @@ services:
       - key: WORKERS
         value: "1"
       - key: TIMEOUT
-        value: "300"
+        value: "600"
       - key: PYTHONPATH
         value: /opt/render/project/src:/opt/render/project/src/Fastspeech2_HS
+      - key: CHUNK_SIZE
+        value: "50"
+      - key: MAX_TEXT_LENGTH
+        value: "1000"
     disk:
       name: audio
       mountPath: /opt/render/project/src/static/audio
