--- a/render.yaml
+++ b/render.yaml
@@ -18,6 +18,9 @@ services:
       # Install Python dependencies
       python -m pip install --upgrade pip
       pip install -r requirements.txt
+      
+      # Install ESPnet library
+      pip install espnet==202304
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --threads 4 --timeout 300 --keep-alive 120 --max-requests 3 --max-requests-jitter 2 --worker-class gthread
     envVars:
       - key: PYTHON_VERSION
@@ -53,4 +56,4 @@ services:
       maxInstances: 1
       targetMemoryPercent: 80
     healthCheckPath: /
-    healthCheckTimeout: 300 
+    healthCheckTimeout: 300
