--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.0.0+cpu
-torchaudio==2.0.1+cpu
-numpy==1.23.5
-scipy==1.10.1
-PyYAML==6.0.1
-flask==2.0.1
-werkzeug==2.0.3
-soundfile==0.12.1
+Flask==2.3.2
 requests==2.31.0
+torch==2.0.1
+torchaudio==2.0.1
+espnet==202304
+espnet_model_zoo
+parallel_wavegan
 matplotlib==3.7.1
-pandas==2.0.3
-indic-num2words==1.3.1
-nltk==3.8.1
-indic-unified-parser==1.0.6
-gunicorn==21.2.0
-espnet==202412
+pandas==2.0.1
+indic-num2words==2.1.0
+gunicorn==20.1.0
+numpy>=1.24.3
 setuptools>=65.5.1
-wheel>=0.40.0
+scipy>=1.10.1
+librosa>=0.10.0
+soundfile>=0.12.1
+typeguard>=2.13.3
 flask-cors
+nltk>=3.8.1
+indic-unified-parser>=1.0.6
 
