--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,17 @@ espnet==202304
 espnet_model_zoo
 parallel_wavegan
 matplotlib==3.7.1
+numpy==1.24.3
 pandas==2.0.1
 indic-num2words==1.3.1
 gunicorn==20.1.0
-numpy>=1.24.3
-setuptools>=65.5.1
-scipy>=1.10.1
-librosa>=0.9.2
-soundfile>=0.12.1
-typeguard>=2.13.3
-flask-cors
-nltk>=3.8.1
-indic-unified-parser>=1.0.6
+setuptools==65.5.1
+scipy==1.10.1
+librosa==0.10.0
+soundfile==0.12.1
+typeguard==2.13.3
+flask-cors==4.0.0
+nltk==3.8.1
+indic-unified-parser==1.0.6
+scikit-learn==1.2.2
 
