--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ librosa==0.9.2
 soundfile==0.12.1
 typeguard==2.13.3
 flask-cors==4.0.0
-nltk==3.8.1
 indic-unified-parser==1.0.6
 scikit-learn==1.2.2
+num2words==0.5.12
 
